few updates for the first ipy notebook

--- a/logistic_regression_1.ipynb
+++ b/logistic_regression_1.ipynb
@@ -7,12 +7,12 @@
     "#Logistic Regression from the Scratch (Part One)\n",
     "##Case Study: Determine whether a person makes over 50K a year\n",
     "\n",
-    "The main objective of this notebook is to implement **Logistic Regression** from the scratch. We start this process by deriving negative log likelihood for the Logistic Regression. Then, simple full-batch **Gradient Descent** will be used for optimizing negative log likelihood. Additionally, as a case study, we will show how to design a simple Machine Learning model for predicting whether a person makes over 50K a year using census data.So key features of this notebook:\n",
-    "* Derive negative log likelihood of the Logistic Regression.\n",
-    "* Build Logistic Regression model from the scratch using Python/Numpy.\n",
-    "* Basic building blocks ( written as Python functions) of the Logistic Regression model will be tested using unit tests.\n",
-    "* Run the Logistic Regression algorithm against a simple 2D dataset.\n",
-    "* Finally, use our Logistic Regression algorithm for building a simple yet practical Machine Learning model."
+    "The main objective of this notebook is to implement **Logistic Regression** from the scratch. We start this process by deriving negative log likelihood of the Logistic Regression. Then, simple full-batch Gradient Descent algorithm will be used for optimizing negative log likelihood function. Additionally, as a case study, we will show how to design a simple machine learning model for predicting whether a person makes over 50K a year using census data.So key features of this notebook:\n",
+    "* Derive negative log likelihood of the logistic regression.\n",
+    "* Build logistic regression model from the scratch using Python/Numpy.\n",
+    "* Basic building blocks ( written as Python functions) of the logistic regression model will be tested using unit tests.\n",
+    "* Run the logistic regression algorithm against a simple 2D dataset.\n",
+    "* Finally, use our logistic regression algorithm for building a simple yet practical machine learning model."
    ]
   },
   {
@@ -25,25 +25,25 @@
     "The most common approach to estimating parameters in parametric models is the maximum likelihood estimator. For logistic regression algorithm, we can define maximum likelihood estimator as given below.\n",
     "\n",
     "\\begin{align}\n",
-    "l(\\mathbf{w}) = \\prod_{i=1}^{N}{P(y_{i} | \\mathbf{X}_{i}, \\mathbf{w})}\n",
+    "l(\\mathbf{w}) = \\prod_{i=1}^{N}{P(y_{i} | \\mathbf{x}_{i}, \\mathbf{w})}\n",
     "\\end{align}\n",
-    "In above equation, $\\mathbf{w}$ represents the parameters we would like to estimate by maximizing conditional probability of $\\mathbf{y}_i$ given $\\mathbf{X}_i$.\n",
+    "In above equation, $\\mathbf{w}$ represents the parameters we would like to estimate by maximizing conditional probability of $\\mathbf{y}_i$ given $\\mathbf{x}_i$.\n",
     "\n",
     "Instead of  solving above maximization problem, we would like to take the negative log and framing it as a minimization problem as given below. \n",
     "\\begin{align}\n",
-    "NLL(\\mathbf{w}) = -\\sum_{i=1}^{N}ln({P(y_{i} | \\mathbf{X}_{i}, \\mathbf{w})})\n",
+    "NLL(\\mathbf{w}) = -\\sum_{i=1}^{N}ln({P(y_{i} | \\mathbf{x}_{i}, \\mathbf{w})})\n",
     "\\end{align}\n",
     "\n",
     "We can further expand above equation using two indicator variables $\\mathbb{I}(y_{i} = 1) = 1$ and $\\mathbb{I}(y_{i} = 0) = 1$.\n",
     "\n",
     "\\begin{align}\n",
-    "NLL(\\mathbf{w}) = -\\sum_{i=1}^{N}ln((\\mathbb{I}(y_{i} = 1){P(y_{i} = 1 | \\mathbf{X}_{i}, \\mathbf{w})}) + ln(\\mathbb{I}(y_{i} = 0){P(y_{i} = 0 | \\mathbf{X}_{i}, \\mathbf{w})})\n",
+    "NLL(\\mathbf{w}) = -\\sum_{i=1}^{N}ln((\\mathbb{I}(y_{i} = 1){P(y_{i} = 1 | \\mathbf{x}_{i}, \\mathbf{w})}) + ln(\\mathbb{I}(y_{i} = 0){P(y_{i} = 0 | \\mathbf{x}_{i}, \\mathbf{w})})\n",
     "\\end{align}\n",
     "\n",
-    "Further, by definition of probability in the logistic regression model: ${P(y_{i} = 1 | \\mathbf{X}_{i}, \\mathbf{w})} = 1 / ( 1 + e^{-\\mathbf{w}^{T}\\mathbf{x}_{i}})$ and  ${P(y_{i} = 0 | \\mathbf{X}_{i}, \\mathbf{w})} = e^{-\\mathbf{w}^{T}\\mathbf{x}_i} / ( 1 + e^{-\\mathbf{w}^{T}\\mathbf{x}_i})$ and by substituting these expressions into our $NLL(\\mathbf{w})$ equation and simplifying it further we can obtain  a simple expression of the derivative of the gradient of the logistic regression.\n",
+    "Further, by definition of probability in the logistic regression model: ${P(y_{i} = 1 | \\mathbf{x}_{i}, \\mathbf{w})} = 1 / ( 1 + e^{-\\mathbf{w}^{T}\\mathbf{x}_{i}})$ and  ${P(y_{i} = 0 | \\mathbf{x}_{i}, \\mathbf{w})} = e^{-\\mathbf{w}^{T}\\mathbf{x}_i} / ( 1 + e^{-\\mathbf{w}^{T}\\mathbf{x}_i})$ and by substituting these expressions into our $NLL(\\mathbf{w})$ equation and simplifying it further we can obtain  a simple expression for the derivative of the gradient of the logistic regression.\n",
     "\n",
     "\\begin{align}\n",
-    "NLL(\\mathbf{w}) &= -\\sum_{i=1}^{N}ln((\\mathbb{I}(y_{i} = 1){P(y_{i} = 1 | \\mathbf{X}_{i}, \\mathbf{w})}) + ln(\\mathbb{I}(y_{i} = 0){P(y_{i} = 0 | \\mathbf{X}_{i}, \\mathbf{w})})) \\\\\n",
+    "NLL(\\mathbf{w}) &= -\\sum_{i=1}^{N}ln((\\mathbb{I}(y_{i} = 1){P(y_{i} = 1 | \\mathbf{x}_{i}, \\mathbf{w})}) + ln(\\mathbb{I}(y_{i} = 0){P(y_{i} = 0 | \\mathbf{x}_{i}, \\mathbf{w})})) \\\\\n",
     "    &= -\\sum_{i=1}^{N}\\mathbb{I}(y_{i} = 1)ln(\\frac{1}{(1 + e^{-\\mathbf{w}^{T}\\mathbf{x}_i})}) + \\mathbb{I}(y_{i} = 0)ln(\\frac{e^{-\\mathbf{w}^{T}\\mathbf{x}_i}}{( 1 + e^{-\\mathbf{w}^{T}\\mathbf{x}_i})}) \\\\\n",
     "    &= -\\sum_{i=1}^{N}\\mathbb{I}(y_{i} = 1)ln(\\frac{1}{(1 + e^{-\\mathbf{w}^{T}\\mathbf{x}_i})}) + (1-\\mathbb{I}(y_{i} = 1))ln(\\frac{e^{-\\mathbf{w}^{T}\\mathbf{x}_i}}{( 1 + e^{-\\mathbf{w}^{T}\\mathbf{x}_i})}) \\\\\n",
     "    &= -\\sum_{i=1}^{N}-\\mathbb{I}(y_{i} = 1)ln(1 + e^{-\\mathbf{w}^{T}\\mathbf{x}_i}) + (1-\\mathbb{I}(y_{i} = 1))(-\\mathbf{w}^{T}\\mathbf{x}_i - ln( 1 + e^{-\\mathbf{w}^{T}\\mathbf{x}_i})) \\\\\n",
