fixed some issues and NLL

--- a/logistic_regression_1.ipynb
+++ b/logistic_regression_1.ipynb
@@ -31,7 +31,7 @@
     "\n",
     "Instead of  solving above maximization problem, we would like to take the negative log and framing it as a minimization problem as given below. \n",
     "\\begin{align}\n",
-    "NLL(\\mathbf{w}) = -\\sum_{i=1}^{N}ln({P(y_{i} | \\mathbf{x}_{i}, \\mathbf{w})})\n",
+    "NLL(\\mathbf{w}) = -\\sum_{i=1}^{N}ln({P(y_i | \\mathbf{x}_i, \\mathbf{w})})\n",
     "\\end{align}\n",
     "\n",
     "We can further expand above equation using two indicator variables $\\mathbb{I}(y_{i} = 1) = 1$ and $\\mathbb{I}(y_{i} = 0) = 1$.\n",
